--- a/memory game/index.html
+++ b/memory game/index.html
@@ -4,9 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Memory Game</title>
 </head>
 <body>
-  
+  <div class="a" onclick="
+  if(counter<5){
+  counter++;
+  create(counter);
+}
+  if(counter===5){
+    counter=0;
+  }
+  ">aa</div>
+
+  <script src="app.js">
+    
+  </script>
 </body>
 </html>
