--- a/memory game/index.html
+++ b/memory game/index.html
@@ -8,8 +8,13 @@
   <title>Memory Game</title>
 </head>
 <body>
-  <script src="app.js">
-    
+  
+  <div id="grid">
+
+
+  </div>
+
+<script src="app.js">    
   </script>
 </body>
 </html>
