--- a/memory game/index.html
+++ b/memory game/index.html
@@ -8,10 +8,9 @@
   <title>Memory Game</title>
 </head>
 <body>
-  
+    <h1>ჯიგრული თამაში</h1>
+
   <div id="grid">
-
-
   </div>
 
 <script src="app.js">    
