--- a/New folder/index.html
+++ b/New folder/index.html
@@ -27,7 +27,7 @@
                 <i class="fa-solid fa-backward  Play reload"></i>
                 <i class="fa-solid fa-play  Play pause" onclick="
                 pause_play();
-                aaa();" id="switch"></i>
+            " id="switch"></i>
                 <i class="fa-solid fa-forward  Play reload"></i>
             </div>
         </div>
