--- a/whac a mole/index.html
+++ b/whac a mole/index.html
@@ -23,7 +23,7 @@
     <div class="square" id="8"></div>
     <div class="square" id="9"></div>
   </div>
-    <button id="play-game" class="no-playing">Etamashe botikos</button>
+    <button id="play-game" class="no-playing">დაიწყე თამაში</button>
   <script src="app.js"></script>
 </body>
 </html>
