--- a/whac a mole/index.html
+++ b/whac a mole/index.html
@@ -24,6 +24,7 @@
     <div class="square" id="9"></div>
   </div>
     <button id="play-game" class="no-playing">დაიწყე თამაში</button>
+    <p id="shedegi">შედეგი: </p>
   <script src="app.js"></script>
 </body>
 </html>
